# CMake_test

./: .editorconfig
t2/: main.c
t4/: CMakeLists.txt  README.md
t4/lib/zwhost/include/: ZWHosts.h  ZWHostsCommon.h
t4/libtest/: CMakeLists.txt  hgh_common.c  hgh_common.h
t4/src/: CMakeLists.txt  main.cpp
